--- a/lib/hello_web/live/todo_live/show.html.heex
+++ b/lib/hello_web/live/todo_live/show.html.heex
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 <h1>Show Todo</h1>
 
 <%= if @live_action in [:edit] do %>
@@ -13,12 +15,12 @@
   </.modal>
 <% end %>
 
-<ul>
+<ul style="list-style-type: none;">
 
   <li>
     <strong>Title:</strong>
     <%= @todo.title %>
-  </li>
+</li>
 
   <li>
     <strong>Description:</strong>
@@ -32,5 +34,6 @@
 
 </ul>
 
-<span><%= live_patch "Edit", to: Routes.todo_show_path(@socket, :edit, @todo), class: "button" %></span> |
-<span><%= live_redirect "Back", to: Routes.todo_index_path(@socket, :index) %></span>
+<span><%= live_patch "Edit", to: Routes.todo_show_path(@socket, :edit, @todo), class: "button" %></span>
+ 
+<span><%= live_redirect "Back", to: Routes.todo_index_path(@socket, :index), class: "button" %></span>
