--- a/lib/hello_web/live/todo_live/index.html.heex
+++ b/lib/hello_web/live/todo_live/index.html.heex
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 <h1>List of all Todos <span class="material-symbols-outlined">event_note</span></h1>
 <h3>The easiest way to keep track of the stuff you want </h3>
 
@@ -16,7 +14,7 @@
   </.modal>
 <% end %>
 
-<table>
+<table class="bg-teal-50 table-auto m-4">
   <thead>
     <tr>
       <th>Title</th>
@@ -33,19 +31,16 @@
         <td><%= todo.description %></td>
         <td><%= todo.completed %></td>
 
-        <td>
-          <span class="todo-show-controls" ><%= live_redirect "Show", to: Routes.todo_show_path(@socket, :show, todo) %>
-          <span class="material-symbols-outlined">visibility</span>
+        <td class="space-x-2">
+          <span class="p-2 border rounded border-red-400"><%= live_redirect "Show", to: Routes.todo_show_path(@socket, :show, todo) %>
           </span>
-          <span class="todo-edit-controls"><%= live_patch "Edit", to: Routes.todo_index_path(@socket, :edit, todo) %>
-            <span class="material-symbols-outlined">edit</span>
+          <span class="p-2 border rounded border-orange-400"><%= live_patch "Edit", to: Routes.todo_index_path(@socket, :edit, todo) %>
           </span>
-          <span class="todo-delete-controls"><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: todo.id, data: [confirm: "Are you sure?"] %>
-            <span class="material-symbols-outlined">delete</span></span>
+          <span class="p-2 border rounded border-lime-400"><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: todo.id, data: [confirm: "Are you sure?"] %></span>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<span class="create-todos"><%= live_patch "Create Todos +", to: Routes.todo_index_path(@socket, :new),class: "button" %></span>
+<span class="p-4 border rounded border-purple-700"><%= live_patch "Create Todos +", to: Routes.todo_index_path(@socket, :new),class: "button" %></span>
