--- a/lib/hello_web/templates/layout/root.html.heex
+++ b/lib/hello_web/templates/layout/root.html.heex
@@ -11,18 +11,17 @@
   </head>
   <body>
     <header>
-      <section class="container">
-        <nav>
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
-          </ul>
-        </nav>
+      <section class="container mx-auto max-w-7xl w-full px-0 py-8 flex justify-center items-center space-x-4">
         <a href="https://phoenixframework.org/" class="phx-logo">
           <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
         </a>
+        <nav>
+          <ul>
+            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
+              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home), class: "hover:underline" %></li>
+            <% end %>
+          </ul>
+        </nav>
       </section>
     </header>
     <%= @inner_content %>
