update todo show page
add a section for todo form and use flexbox

--- a/lib/hello_web/live/todo_live/index.html.heex
+++ b/lib/hello_web/live/todo_live/index.html.heex
@@ -1,47 +1,48 @@
-<p class="font-bold p-4 m-4 text-6xl font-mono decoration-double">List of all Todos</p>
-<h1 class="p-2 m-2 font-bold " >The easiest way to keep track of the stuff you want </h1>
+<section class="flex flex-col w-4/5 justify-center">
+  <p class="font-bold p-4 m-4 text-6xl font-mono decoration-double">List of all Todos</p>
+  <h1 class="p-2 m-2 font-bold " >The easiest way to keep track of the stuff you want </h1>
 
-<%= if @live_action in [:new, :edit] do %>
-  <.modal return_to={Routes.todo_index_path(@socket, :index)}>
-    <.live_component
-      module={HelloWeb.TodoLive.FormComponent}
-      id={@todo.id || :new}
-      title={@page_title}
-      action={@live_action}
-      todo={@todo}
-      return_to={Routes.todo_index_path(@socket, :index)}
-    />
-  </.modal>
-<% end %>
+  <%= if @live_action in [:new, :edit] do %>
+    <.modal return_to={Routes.todo_index_path(@socket, :index)}>
+      <.live_component
+        module={HelloWeb.TodoLive.FormComponent}
+        id={@todo.id || :new}
+        title={@page_title}
+        action={@live_action}
+        todo={@todo}
+        return_to={Routes.todo_index_path(@socket, :index)}
+      />
+    </.modal>
+  <% end %>
 
-<table class="bg-cyan-200 table-auto m-4">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Completed</th>
+  <table class="bg-cyan-200 table-auto p-4 mb-4">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Completed</th>
 
-      <th></th>
-    </tr>
-  </thead>
-  <tbody id="todos">
-    <%= for todo <- @todos do %>
-      <tr id={"todo-#{todo.id}"}>
-        <td class="m-4 p-4"><%= todo.title %></td>
-        <td class="m-4 p-4"><%= todo.description %></td>
-        <td class="m-4 p-4"><%= todo.completed %></td>
-
-        <td class="space-x-2">
-          <span class="p-2 border rounded border-red-400 hover:font-bold"><%= live_redirect "Show", to: Routes.todo_show_path(@socket, :show, todo) %>
-          </span>
-          <span class="p-2 border rounded border-orange-400 hover:font-bold"><%= live_patch "Edit", to: Routes.todo_index_path(@socket, :edit, todo) %>
-          </span>
-          <span class="p-2 border rounded border-lime-400 hover:font-bold"><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: todo.id, data: [confirm: "Are you sure?"] %></span>
-        </td>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody id="todos">
+      <%= for todo <- @todos do %>
+        <tr id={"todo-#{todo.id}"}>
+          <td class="m-4 p-4"><%= todo.title %></td>
+          <td class="m-4 p-4"><%= todo.description %></td>
+          <td class="m-4 p-4"><%= todo.completed %></td>
 
+          <td class="space-x-2">
+            <span class="p-2 border rounded border-red-400 hover:font-bold"><%= live_redirect "Show", to: Routes.todo_show_path(@socket, :show, todo) %>
+            </span>
+            <span class="p-2 border rounded border-orange-400 hover:font-bold"><%= live_patch "Edit", to: Routes.todo_index_path(@socket, :edit, todo) %>
+            </span>
+            <span class="p-2 border rounded border-lime-400 hover:font-bold"><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: todo.id, data: [confirm: "Are you sure?"] %></span>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+</section>
 <span class="p-2 border rounded border-purple-700 bg-cyan-400 hover:font-bold"  ><%= live_patch "Create Todos +", to: Routes.todo_index_path(@socket, :new),class: "button" %></span>
-
